fixed bug where expenses list too long will be out of view

--- a/src/components/ViewExpensesModal/view-expenses-modal.scss
+++ b/src/components/ViewExpensesModal/view-expenses-modal.scss
@@ -1,4 +1,7 @@
 .expenses {
+  max-height: 550px;
+  overflow-y: scroll;
+  
   .modal-body .grid {
     grid-template-columns: repeat(4, 1fr);
 
